--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://sebastian-sierra.github.io/node-prueba/",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src",
-    "dev": "nodemon src",
-    "deploy": "gh-pages -d src/views"
+    "dev": "nodemon src"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +14,6 @@
   "dependencies": {
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "gh-pages": "^3.1.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
